tests/typing/success/0020-proji.ec
op fst (x:int * int) = x.`1.

