tests/typing/fail/0020-proji.ec
op foo (x:int) = x.`1.